<resources>
    <string name="app_name">Room Database</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_first_name">First Name</string>
    <string name="str_last_name">Last Name</string>
    <string name="str_age">Age</string>
    <string name="str_add">Add</string>
    <string name="str_update">Update</string>
    <string name="str_add_new_user">Add New User</string>
    <string name="str_update_user">Update User</string>
    <string name="str_fill_fields_and_age_valid">Please fill out all the fields and ensure age is valid (0–120)</string>
    <string name="str_successfully_added">Successfully added</string>
    <string name="str_successfully_updated">Successfully updated</string>
    <string name="str_binding_null_error">Binding should not be accessed when it is null</string>
    <string name="str_delete">Delete</string>
    <string name="str_delete_all">Delete Everything</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_delete_user">Delete user?</string>
    <string name="str_successfully_removed_everything">Successfully removed everything</string>
    <string name="str_delete_everything">Delete everything?</string>
    <string name="str_message_delete_everything">Are you sure you want to delete everything in the database?</string>
</resources>